--- a/fakeweed.html
+++ b/fakeweed.html
@@ -1,3 +1,628 @@
+<?php \Stripe\Stripe::setApiKey("sk_live_T85G1mvOBRy4DvwObju6UiAX");
+\Stripe\Stripe::setApiVersion("2018-07-27");
+?>
+<?php
+class Webhook
+{
+    private $config;
+    private $db;
+    private $event;
+    private $customer;
+    function __construct($config, $event){
+        $this->config = $config;
+        $this->db = $config['db'];
+        $this->event = $event;
+    }
+    /*
+     * Purpose of the flush, is to send the response code back to Stripe right away
+     * to prevent their request from timing out, and retries being sent.
+     */
+    public function account_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function account_application_deauthorized(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function account_external_account_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function account_external_account_deleted(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function account_external_account_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function application_fee_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function application_fee_refunded(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function application_fee_refund_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function balance_available(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function bitcoin_receiver_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function bitcoin_receiver_filled(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function bitcoin_receiver_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function bitcoin_receiver_transaction_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function charge_captured(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function charge_failed(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function charge_pending(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function charge_refunded(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function charge_succeeded(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function charge_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function charge_dispute_closed(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function charge_dispute_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function charge_dispute_funds_reinstated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function charge_dispute_funds_withdrawn(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function charge_dispute_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function coupon_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function coupon_deleted(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function coupon_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function customer_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function customer_deleted(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function customer_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function customer_discount_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function customer_discount_deleted(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function customer_discount_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function customer_source_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function customer_source_deleted(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function customer_source_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function customer_subscription_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function customer_subscription_deleted(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function customer_subscription_trial_will_end(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function customer_subscription_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function invoice_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function invoice_payment_failed(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function invoice_payment_succeeded(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function invoice_sent(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function invoice_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function invoiceitem_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function invoiceitem_deleted(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function invoiceitem_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function order_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function order_payment_failed(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function order_payment_succeeded(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function order_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function order_return_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function payout_paid(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function payout_failed(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function payout_canceled(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function payout_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function payout_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function plan_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function plan_deleted(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function plan_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function product_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function product_deleted(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function product_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function review_closed(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function review_opened(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function sku_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function sku_deleted(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function sku_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function source_canceled(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function source_chargeable(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function source_failed(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function source_transaction_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function transfer_created(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function transfer_deleted(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function transfer_failed(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function transfer_paid(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function transfer_reversed(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function transfer_updated(){
+        $this->log();
+        http_response_code(200);
+        ob_end_flush();
+    }
+    /*
+     * stripe test to see if endpoint is alive; return 200 to let it know it is!
+     */
+    public function ping(){
+        http_response_code(200);
+        ob_end_flush();
+    }
+    public function isNewEvent($event_id){
+        if($this->config['log_type'] !== 1){
+            //Not logging events for some reason, so no way to tell if duplicate.
+            return true;
+        }
+        $stmt = $this->db->prepare("SELECT COUNT(*) FROM webhook_logs WHERE event_id = :event_id");
+        $stmt->bindParam(':event_id', $event_id);
+        $stmt->execute();
+        $rows = $stmt->fetchColumn();
+        if($rows > 0){
+            return false;
+        }else{
+            return true;
+        }
+    }
+    private function getCustomer($customer_id){
+        $this->customer = \Stripe\Customer::retrieve($customer_id);
+    }
+    private function log(){
+        if($this->config['debug'] === 1){
+            if(!file_exists($this->config['log_path'] . date("d-m-Y") . '/' . date("H-i-s") . '-' . $this->event->type . '.txt')){
+                mkdir($this->config['log_path'] . date("d-m-Y") . '/');
+            }
+            $filename = $this->config['log_path'] . date("d-m-Y") . '/' . date("H-i-s") . '-' . $this->event->type . '.txt';
+            file_put_contents($filename, $this->event);
+        }
+        //0 corresponds to no logging.
+        if($this->config['log_type'] === 1){
+            // Database logging
+            $stmt = $this->db->prepare("INSERT INTO webhook_logs (event_id, event_type) VALUES (:event_id, :event_type)");
+            $stmt->bindParam(':event_id',$this->event->id);
+            $stmt->bindParam(':event_type',$this->event->type);
+            $stmt->execute();
+        }
+        // Send email notice for certain event typs.
+        if(in_array($this->event->type, $this->config['email_events'])){
+            require_once($this->config['phpmailer']);
+            $mail = new PHPMailer;
+            if($this->config['email']['use_smtp'] === 1){
+                $mail->IsSMTP();
+                $mail->SMTPAuth = true;
+                $mail->Host = $this->config['email']['smtp_host'];
+                $mail->Port = $this->config['email']['smtp_port'];
+                $mail->Username = $this->config['email']['smtp_user'];
+                $mail->Password = $this->config['email']['smtp_pass'];
+                $mail->setFrom($this->config['email']['smtp_user']);
+                $mail->AddReplyTo($this->config['email']['smtp_user']);
+            }else{
+                $mail->setFrom($this->config['email']['from']);
+                $mail->AddReplyTo($this->config['email']['from']);
+            }
+            $mail->addAddress = $this->config['email']['to'];
+            $mail->Subject = $this->config['email']['subject'];
+            $mail->Body = 'Date: ' . date("d-m-Y") . ' Time: ' . date("H-i-s") . PHP_EOL;
+            $mail->Body .= 'Event Type: ' . $this->event->type . PHP_EOL;
+            $mail->Body .= 'Event ID: ' . $this->event->id;
+            $mail->send();
+        }
+    }
+} ?>
+<?php
+ //List of all event types, for verification.
+return array(
+    'account.updated',
+    'account.application.deauthorized',
+    'account.external_account.created',
+    'account.external_account.deleted',
+    'account.external_account.updated',
+    'application_fee.created',
+    'application_fee.refunded',
+    'application_fee.refund.updated',
+    'balance.available',
+    'bitcoin.receiver.created',
+    'bitcoin.receiver.filled',
+    'bitcoin.receiver.updated',
+    'bitcoin.receiver.transaction.created',
+    'charge.captured',
+    'charge.failed',
+    'charge.pending',
+    'charge.refunded',
+    'charge.succeeded',
+    'charge.updated',
+    'charge.dispute.closed',
+    'charge.dispute.created',
+    'charge.dispute.funds_reinstated',
+    'charge.dispute.funds_withdrawn',
+    'charge.dispute.updated',
+    'coupon.created',
+    'coupon.deleted',
+    'coupon.updated',
+    'customer.created',
+    'customer.deleted',
+    'customer.updated',
+    'customer.discount.created',
+    'customer.discount.deleted',
+    'customer.discount.updated',
+    'customer.source.created',
+    'customer.source.deleted',
+    'customer.source.updated',
+    'customer.subscription.created',
+    'customer.subscription.deleted',
+    'customer.subscription.updated',
+    'customer.subscription.trial_will_end',
+    'invoice.created',
+    'invoice.payment_failed',
+    'invoice.payment_succeeded',
+    'invoice.sent',
+    'invoice.updated',
+    'invoiceitem.created',
+    'invoiceitem.deleted',
+    'invoiceitem.updated',
+    'order.created',
+    'order.payment_failed',
+    'order.payment_succeeded',
+    'order.updated',
+    'order_return.created',
+    'payout.canceled',
+    'payout.created',
+    'payout.updated',
+    'payout.paid',
+    'payout.failed',
+    'plan.created',
+    'plan.deleted',
+    'plan.updated',
+    'product.created',
+    'product.deleted',
+    'product.updated',
+    'review.closed',
+    'review.opened',
+    'sku.created',
+    'sku.deleted',
+    'sku.updated',
+    'source.canceled',
+    'source.chargeable',
+    'source.failed',
+    'source.transaction.created',
+    'transfer.created',
+    'transfer.failed',
+    'transfer.paid',
+    'transfer.reversed',
+    'transfer.updated',
+    'ping'
+); ?>
+<?php
+/*
+ *  Set path to stripe lib
+ */
+$config = require_once('webhook_config.php');
+require_once('webhookclass.php');
+require_once($config['stripe_path']);
+$event_array = require_once('eventarray.php');
+if($config['log_type'] === 1){
+    $config['db'] = new PDO("mysql:host={$config['db_host']};dbname={$config['db_name']}", $config['db_user'], $config['db_pass']);
+}
+\Stripe\Stripe::setApiKey($config['api_key']);
+/*
+ *  Validate the event(ensure it is coming from stripe, and not a third party event.)
+ */
+$input = @file_get_contents("php://input");
+function handleEvent($event, $event_array, $config){
+    $event_type = $event->type;
+    /*
+     * replace '.' in the event type with _ to suit function naming conventions.
+     */
+    if(in_array($event_type, $event_array)) {
+        $event_type = str_replace('.', '_', $event_type);
+        $webhook = new Webhook($config, $event);
+        $isNewEvent = $webhook->isNewEvent($event->id);
+        if($isNewEvent === false){
+            http_response_code(200);
+            exit;
+        }else if($isNewEvent === true){
+            ob_start();
+            $webhook->{$event_type}();
+        }
+    }else{
+        http_response_code(200);
+        exit;
+    }
+}
+if($config['verification']['enabled'] === 0){
+    try {
+        $event_json = json_decode($input);
+        $event = \Stripe\Event::retrieve($event_json->id);
+        handleEvent($event, $event_array, $config);
+    }catch(\Exception $e){
+        error_log($e);
+    }
+}else if($config['verification']['enabled'] === 1){
+    $signature = $_SERVER['HTTP_STRIPE_SIGNATURE'];
+    try{
+        $event = \Stripe\Webhook::constructEvent($input,$signature,$config['verification']['code']);
+        handleEvent($event, $event_array, $config);
+    }catch(\UnexpectedValueException $e) {
+        http_response_code(400);
+        exit();
+    } catch(\Stripe\Error\SignatureVerification $e) {
+        http_response_code(400);
+        exit();
+    }
+}else{
+    http_response_code(200);
+    exit();
+} ?>
 <?php
 return [
     /*
@@ -79,3 +704,15 @@ return [
     'db_pass' => '',
     'db_name' => '',
 ];
+?>
+<?php <form action="your-server-side-code" method="POST">
+  <script
+    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+    data-key="pk_test_qb5Tk0OGmBdxypeicfMMFtFU"
+    data-amount="999"
+    data-name="Demo Site"
+    data-description="Widget"
+    data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+    data-locale="auto">
+  </script>
+</form>
