--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <body>
 <img src = LogoMakr_0Ag8BS.png>
-<a href="/fakeweed.HTML" class="btn btn-primary"> Fake bag o weed</a>
+<a href="/fakeweed.html" class="btn btn-primary"> Fake bag o weed</a>
 </body>
