--- a/fakeweed.html
+++ b/fakeweed.html
@@ -1,6 +1,7 @@
-<?php \Stripe\Stripe::setApiKey("sk_live_T85G1mvOBRy4DvwObju6UiAX");
-\Stripe\Stripe::setApiVersion("2018-07-27");
->
+<html>
+    
+    <?php \Stripe\Stripe::setApiKey("sk_live_T85G1mvOBRy4DvwObju6UiAX");
+\Stripe\Stripe::setApiVersion("2018-07-27");>
 <?php
 class Webhook
 {
@@ -717,3 +718,4 @@ return [
     data-locale="auto">
   </script>
 </form>
+</html>
